--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ body{
   margin-bottom: 50px;
   padding: 0;
   background-color: white;
+  border: none;
 
 }
 
@@ -24,4 +25,20 @@ body{
   color: #4aa1f3;
   font-weight: 500;
 
+}
+
+#logo{
+  max-height: 48px;
+  margin-right: 8px;
+  display: inline-block;
+  margin-top: -15px;
+
+}
+
+#headRow{
+background: url(/images/bg.jpg);
+background-size: cover;
+width: 100%;
+height: 450px;
+margin-top: 0px;
 }
