--- a/src/App.css
+++ b/src/App.css
@@ -35,10 +35,18 @@ body{
 
 }
 
-#headRow{
+#headRow {
 background: url(/images/bg.jpg);
 background-size: cover;
 width: 100%;
 height: 450px;
 margin-top: 0px;
+}
+
+#bottomRow-2 {
+  font-size: 50px;
+  text-align:  center;
+  color: darkgray;
+  font-weight: bold;
+
 }
